[gd_scene load_steps=8 format=2]

[ext_resource path="res://Health UI.gd" type="Script" id=1]
[ext_resource path="res://UI/Sprites/speed_empty.png" type="Texture" id=2]
[ext_resource path="res://UI/Sprites/speed.png" type="Texture" id=3]
[ext_resource path="res://UI/Sprites/bolt_empty2.png" type="Texture" id=4]
[ext_resource path="res://UI/Sprites/bolt.png" type="Texture" id=5]
[ext_resource path="res://UI/Sprites/heart_empty.png" type="Texture" id=6]
[ext_resource path="res://UI/Sprites/heart.png" type="Texture" id=7]

[node name="Player UI" type="Control"]
margin_right = 59.0
margin_bottom = 11.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 16.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 62.0
margin_bottom = 16.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaUIEmpty" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 12.0
margin_right = 76.0
margin_bottom = 27.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaUIFull" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 12.0
margin_right = 76.0
margin_bottom = 27.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedUIEmpty" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 22.0
margin_right = 76.0
margin_bottom = 37.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedUIFull" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 22.0
margin_right = 76.0
margin_bottom = 37.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
